# here-search-demo

./: .codecov.yml  .gitignore  .gitlab-ci.yml  .ort.yml  .readthedocs.yml  Dockerfile  LICENSE  MANIFEST.in  README.md  RELEASING.md  demo-config-example.json  demo.ipynb  docker-compose.yaml  example-credentials.properties  helpers.py  here-search-console  here-search-notebook  install.sh  pyproject.toml  requirements.txt  requirements_dev.txt  run.sh  setup.cfg  setup.py
.binder/: postBuild
.github/workflows/: release.yml  test.yml
binder/: postBuild
docs/: conf.py  developers.md  docker.md  getting-started.md  index.md  jupyterhub.md  oneboxmap.ipynb  oneboxmap_ext.ipynb
docs/_static/: custom.css  layout.js
docs/contributing/: appendix.md  build-infrastructure.md  index.md  release-process.md
docs/developer/: index.md
docs/explanation/: credentials.md  engine.md  index.md  route_engine.md  signals.md
docs/guides/: actions.md  index.md  route_search.md  signals.md  vicinity_titles.md
docs/reference/: api_reference.md  index.md  map_math.md  route_math.md
docs/tutorials/: index.md  notebook_demo.md  notebook_obm_1_api.md  notebook_obm_2_api.md  notebook_obm_3_widget.md  notebook_obm_4_auth.md  notebook_obm_5_automate.md
here_search/: api.py  base.py  user.py  util.py
here_search/terminal/: __init__.py  simple_app.py
here_search/widgets/: __init__.py  app.py  design.py  extension.py  query.py  response.py
jupyterlite_build/: pyproject_toml.py  strip_notebooks.py  xeus.sh
jupyterlite_build/xeus/: create_env.py
notebooks/: basic-demo.ipynb  demo.ipynb  obm_1_api.ipynb  obm_2_api.ipynb  obm_3_widget.ipynb  obm_4_auth.ipynb  obm_4_automate.ipynb  obm_5_automate.ipynb
requirements/: build.txt  dev.txt  docs.txt  lite.txt  lite_run.txt  test.txt  util.txt
scripts/: lint.sh  lite-build.sh  profile.py
search/: api.py  core.py  user.py  util.py
search/terminal/: __init__.py
search/widgets/: __init__.py  design.py  query.py  response.py
search/widgets/design/: __init__.py
search/widgets/query/: __init__.py
search/widgets/response/: __init__.py
src/here_search/: README.md  api.py  api_options.py  base.py  entities.py  event.py  http.py  user.py  util.py
src/here_search/demo/: api.py  api_options.py  base.py  event.py  lite.py  user.py  util.py
src/here_search/demo/entity/: endpoint.py  intent.py  place.py  request.py
src/here_search/demo/notebooks/: _install.py  demo.ipynb  obm_1_api.ipynb  obm_2_api.ipynb  obm_3_widget.ipynb
src/here_search/demo/scripts/: check-updated-packages.sh  here-search-notebooks  lint.sh  lite-run.sh  lite_run.sh
src/here_search/demo/widgets/: app.py  input.py  output.py
src/here_search/entity/: constants.py  event.py  intent.py  request.py
src/here_search/notebooks/: demo.ipynb  obm_1_api.ipynb  obm_1_base.ipynb  obm_2_api.ipynb  obm_2_base.ipynb  obm_2_details.ipynb  obm_3_ontology.ipynb  obm_3_widget.ipynb  obm_4_options.ipynb  obm_5_session.ipynb  obm_app.ipynb  obm_base.ipynb  obm_details.ipynb  obm_details2.ipynb  obm_details_todo.ipynb  obm_ext.ipynb  oneboxmap.ipynb  oneboxmap_details.ipynb  oneboxmap_ext.ipynb
src/here_search/notebooks/docs/: obm_1_api.ipynb  obm_2_api.ipynb  obm_3_widget.ipynb
src/here_search/notebooks/legacy/: obm_3_ontology.ipynb  obm_4_options.ipynb
src/here_search/scripts/: here-search-notebook  lite_run.sh  macos_run.sh
src/here_search/terminal/: app.py  simple_app.py
src/here_search/widgets/: app.py  design.py  extension.py  input.py  output.py  request.py  response.py  util.py
src/here_search_demo/: __init__.py  api.py  api_options.py  auth.py  base.py  detour.py  event.py  http.py  lite.py  ranking.py  route_engine.py  user.py  util.py
src/here_search_demo/entity/: endpoint.py  intent.py  place.py  request.py  response.py  response_data.py
src/here_search_demo/widgets/: app.py  credentials.py  input.py  input_map.py  input_text.py  output.py  output_buttons.py  output_details.py  output_helpers.py  output_json.py  output_labels.py  output_map.py  route.py  route_geometry.py  state.py  util.py
src/here_search_demo/widgets/css/: label.css  popup.css
src/here_search_demo/widgets/js/: credentials_loader.mjs  credentials_loader_logic.js
tests/: __init__.py  conftest.py  test_api.py  test_app_options.py  test_auth.py  test_base.py  test_detour.py  test_entities.py  test_hydrate_redundancy.py  test_jl_create_xeus_env.py  test_lite.py  test_notebooks.py  test_response.py  test_route.py  test_route_engine.py  test_user.py  test_util.py  test_widgets_app.py  test_widgets_buttons_pool.py  test_widgets_feature_rendering.py  test_widgets_input.py  test_widgets_labels.py  test_widgets_output.py  test_widgets_output_json.py  test_widgets_state.py  test_widgets_util.py
tests/js/: credentials_loader.test.mjs
