###############################################################################
#
# Copyright (c) 2025 HERE Europe B.V.
#
# SPDX-License-Identifier: MIT
# License-Filename: LICENSE
#
###############################################################################

[build-system]
requires = [
    "setuptools>=82.0.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "here-search-demo"
description = "HERE Geocoding and Search demo and widgets"
readme = "README.md"
authors = [ {name = "HERE Global B.V. and its affiliate(s)", email = "590094+decitre@users.noreply.github.com"} ]
license = "MIT"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: WebAssembly :: Emscripten",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
    "aiohttp",
    "ipyleaflet==0.20.0",
    "ipywidgets==8.1.8",
    "orjson",
    "xyzservices==2025.11.0",
    "yarl",
]
dynamic = ["version"]

[tool.setuptools.dynamic]
version = {attr = "here_search_demo.__version__"}

[project.urls]
homepage = "https://here.com"
repository = "https://github.com/heremaps/here-search-demo"

[project.optional-dependencies]
lab = [
    "ipykernel==6.31.0",  # 6.x becasue of https://github.com/jupyter-widgets/ipywidgets/issues/4012
    "jupyterlab"
]
route = [
    "flexpolyline==0.1.0",
    "pyproj==3.7.2",
    "shapely",
]
dev = [
    "build",
    "bumpver",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "ruff",
    "twine",
    "wheel"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
namespaces = true

[tool.setuptools.package-data]
"here_search_demo" = [
    "notebooks/obm_*.ipynb",
    "notebooks/*demo.ipynb",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
pythonpath = ["src"]
addopts = "-ra -q"
testpaths = [
    "tests",
]
norecursedirs = [
    "workspace",
]

[tool.ruff]
line-length = 120
exclude = ["*.ipynb"]

[tool.ruff.lint.isort]
combine-as-imports = true

[bumpver]
current_version = "0.17.6"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = true

[bumpver.file_patterns]
"pyproject.toml" = [
    '^current_version = "{version}"',
]
"src/here_search_demo/__init__.py" = [
    '__version__ = "{version}"'
]
