###############################################################################
#
# Copyright (c) 2025 HERE Europe B.V.
#
# SPDX-License-Identifier: MIT
# License-Filename: LICENSE
#
###############################################################################

[build-system]
requires = [
    "setuptools>=82.0.1",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "here-search-demo"
description = "HERE Geocoding and Search demo and widgets"
readme = "README.md"
authors = [ {name = "HERE Global B.V. and its affiliate(s)", email = "590094+decitre@users.noreply.github.com"} ]
license = "MIT"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: WebAssembly :: Emscripten",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
    "aiohttp",
    "flexpolyline",
    "ipyleaflet",
    "ipywidgets",
    "orjson",
    "shapely",
    "yarl",
]
dynamic = ["version"]

[tool.setuptools.dynamic]
version = {attr = "here_search_demo.__version__"}

[project.urls]
homepage = "https://here.com"
repository = "https://github.com/heremaps/here-search-demo"

[project.optional-dependencies]
lab = [
    "ipykernel",
    "jupyterlab"
]
pyodide_notebook_build = [
  "jupyter_server",
  # "notebook",  # Do not add the notebook package
  "jupyterlab_server",
  "jupyterlite-core",
  "jupyterlite-pyodide-kernel",
  "libarchive-c",
]
pyodide_voici_build = [
    "jupyter_server",
	"jupyterlite-core==0.7.0",
	"jupyterlite-pyodide-kernel==0.7.0",
	"voici-core==0.10.0",
	"notebook>=7.5.0,<7.6",
	"libarchive-c"
]
dev = [
    "build",
    "bumpver",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-xdist",
    "ruff",
    "twine",
    "wheel"
]
docs = [  # Not needed on github for now
    "sphinx",
    "furo",
    "myst-parser",
    "sphinx-autodoc-typehints==3.6.1",  # highest version available in ELM
    "here-search-demo"
]

[dependency-groups]
xeus_build = [
  "jupyter_server",
  # "notebook",  # Do not add the notebook package
  "jupyterlite-core",
  "jupyterlab_server",
  "jupyterlite-xeus",
  "libarchive-c",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
namespaces = true

[tool.setuptools.package-data]
"here_search_demo" = [
    "notebooks/obm_*.ipynb",
    "notebooks/*demo.ipynb",
    "widgets/css/*.css",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
pythonpath = ["src", "jupyterlite_build"]
addopts = "-ra -q"
testpaths = [
    "tests",
]
norecursedirs = [
    "workspace",
]

[tool.coverage.run]
source = ["src", "jupyterlite_build"]

[tool.coverage.report]
omit = [
    # Pure UI composition
    "*/widgets/app.py",
]

[tool.ruff]
line-length = 120
exclude = ["*.ipynb"]

[tool.ruff.lint.isort]
combine-as-imports = true

[bumpver]
current_version = "0.35.1"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = true

[bumpver.file_patterns]
"pyproject.toml" = [
    '^current_version = "{version}"',
]
"src/here_search_demo/__init__.py" = [
    '__version__ = "{version}"'
]
"README.md" = [
    '^Package version: `{version}`$'
]
