[metadata]
name = here-search-demo
version = attr: here_search.demo.__version__
description = HERE Geocoding and Search demo and widgets
author = HERE Europe B.V.
url = https://here.com
project_urls =
    Source = ssh://git@main.gitlab.in.here.com:3389/olp/onesearch/playground/decitre/search-notebook-ext.git
license = MIT
license_files =
    LICENSE
classifiers =
    Intended Audience :: Developers
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License

[options]
zip_safe = False
python_requires = >=3.8
package_dir =
    = src
scripts =
    src/here_search/demo/scripts/here-search-notebooks
    src/here_search/demo/scripts/lite-run.sh
install_requires = file: requirements/build.txt

[options.packages.find]
where = src

[options.package_data]
here_search.notebooks =
    *.ipynb
* =
    requirements/*.txt; setup.py; setup.cfg; pyproject.toml
